tests/ui/g-load-begin-wrong-control-kind.stderr
error[E0277]: the trait bound `CanonicalControl<LoadBeginKind>: hibana::global::RequireSelfSendForCanonical<hibana::global::steps::False>` is not satisfied
  --> tests/ui/g-load-begin-wrong-control-kind.rs:49:9
   |
49 | /         g::Msg<
50 | |             { LABEL_MGMT_LOAD_BEGIN },
51 | |             GenericCapToken<LoadBeginKind>,
52 | |             CanonicalControl<LoadBeginKind>,
53 | |         >,
   | |_________^ unsatisfied trait bound
   |
help: the trait `RequireSelfSendForCanonical<hibana::global::steps::False>` is not implemented for `CanonicalControl<LoadBeginKind>`
      but trait `RequireSelfSendForCanonical<hibana::global::steps::True>` is implemented for it
  --> src/global.rs
   |
   | impl<K: ResourceKind> RequireSelfSendForCanonical<steps::True> for CanonicalControl<K> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `hibana::global::steps::True`, found `hibana::global::steps::False`
note: required by a bound in `send`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>()
   |              ---- required by a bound in this function
...
   |         RequireSelfSendForCanonical<<From as steps::RoleEq<To>>::Output>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `send`
